--- a/heldags/webpage/templates/webpage/includes/navbar.html
+++ b/heldags/webpage/templates/webpage/includes/navbar.html
@@ -8,10 +8,10 @@
             <a class="nav-link" id="test1" href="/test1">Test1</a>
         </li>
         <li class="list-inline-item">
-            <a class="nav-link" id="resultater" href="/resultater">Resultater</a>
+            <a class="nav-link" id="None" href="#">None</a>
         </li>
         <li class="list-inline-item">
-            <a class="nav-link" id="registrerKamp" href="/registrerKamp">Registrer Kamp</a>
+            <a class="nav-link" id="None" href="#">None</a>
         </li>
     </ul>
 </nav>
