oppgradert bootstrap og jquery, form template og dropdown i nav

--- a/heldags/webpage/static/webpage/css/main.css
+++ b/heldags/webpage/static/webpage/css/main.css
@@ -55,6 +55,13 @@ footer div {
 
 .container {
     margin-top: 3%;
+    width: 50%;
+}
+
+form {
+    display: block;
+    width: 50%;
+    margin: auto;
 }
 
 .hoverEffect:hover {
