--- a/heldags/webpage/templates/webpage/includes/navbar.html
+++ b/heldags/webpage/templates/webpage/includes/navbar.html
@@ -1,5 +1,5 @@
 {% load static %}
-<nav class="navbar smart-scroll sticky-top navbar-dark">
+<nav class="navbar navbar-expand-lg smart-scroll sticky-top navbar-dark">
     <ul class="list-inline text-center">
         <li class="list-inline-item">
             <a class="nav-link" id="hjem" href="/">Hjem</a>
@@ -12,6 +12,24 @@
         </li>
         <li class="list-inline-item">
             <a class="nav-link" id="None" href="#">None</a>
+        </li>
+
+        {# fikse active? #}
+        <li class="list-inline-item">
+            <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Dropdown
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
         </li>
     </ul>
 </nav>
