--- a/heldags/webpage/templates/webpage/test1.html
+++ b/heldags/webpage/templates/webpage/test1.html
@@ -4,6 +4,7 @@
 <input type="hidden" value="test1" id="active">
 <div class="container">
     <p>test1</p>
+    {% include "webpage/includes/form.html" %}
 </div>
 
 {% endblock content %}
