--- a/heldags/webpage/templates/webpage/includes/base.html
+++ b/heldags/webpage/templates/webpage/includes/base.html
@@ -14,12 +14,12 @@
         integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
         crossorigin="anonymous"></script> -->
     {% load static %}
-    <script src="{% static 'webpage/javascript/jquery/jquery-3.5.1.min.js' %}"></script>
-    <script src="{% static 'webpage/javascript/bootstrap-4.3.1-dist/js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'webpage/javascript/jquery/jquery-3.6.0.min.js' %}"></script>
+    <script src="{% static 'webpage/javascript/bootstrap/bootstrap.min.js' %}"></script>
     <script src="{% static 'webpage/javascript/active.js' %}" defer></script>
     <script src="{% static 'webpage/javascript/smartScroll.js' %}" defer></script>
 
-    <link rel="stylesheet" href="{% static 'webpage/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'webpage/css/bootstrap/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'webpage/css/main.css' %}">
     {% block head %}{% endblock head %}
 </head>
