endra forms og litt

--- a/project/webpage/templates/webpage/includes/navbar.html
+++ b/project/webpage/templates/webpage/includes/navbar.html
@@ -5,7 +5,7 @@
             <a class="nav-link" id="hjem" href="/">Hjem</a>
         </li>
         <li class="list-inline-item">
-            <a class="nav-link" id="test1" href="/test1">Test1</a>
+            <a class="nav-link" id="formPage" href="/formPage">Form Page</a>
         </li>
         <li class="list-inline-item">
             <a class="nav-link" id="None" href="#">None</a>
