--- a/project/webpage/templates/webpage/includes/base.html
+++ b/project/webpage/templates/webpage/includes/base.html
@@ -2,17 +2,6 @@
 
 <head>
     <title>Webpage | {% block title %}{% endblock %}</title>
-    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script> -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
-        integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
-        crossorigin="anonymous"></script> -->
-    <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
-        integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
-        crossorigin="anonymous"></script> -->
     {% load static %}
     <script src="{% static 'webpage/javascript/jquery/jquery-3.6.0.min.js' %}"></script>
     <script src="{% static 'webpage/javascript/bootstrap/bootstrap.min.js' %}"></script>
@@ -29,7 +18,7 @@
     {% block content %}{% endblock %}
     <footer class="text-center text-sm-start">
         <div class="text-center p-2">
-            © 2021 Copyright: <a class="text-light" target="_blank" href="https://github.com/AndersFelde">Anders K.
+            © 2021 Copyright: <a class="text-light" target="_blank" href="https://github.com/AndersFelde/Django-template">Anders K.
                 Felde</a>
         </div>
         <!-- Copyright -->
